<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_cut"
        android:title="@string/action_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/action_properties"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        app:showAsAction="never" />
</menu>
