<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/global_menu_trash"
        android:icon="@drawable/ic_trash"
        android:title="@string/menu_trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/global_menu_analyzer"
        android:icon="@drawable/ic_storage_analyzer"
        android:title="@string/menu_storage_analyzer"
        app:showAsAction="never" />

    <item
        android:id="@+id/global_menu_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/menu_bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/global_menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
