<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:stretchColumns="1">

        <TableRow android:paddingBottom="8dp">
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_name"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propName"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>

        <TableRow android:paddingBottom="8dp">
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_path"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propPath"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>

        <TableRow android:paddingBottom="8dp">
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_type"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propType"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>

        <TableRow android:paddingBottom="8dp">
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_size"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propSize"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>

        <TableRow android:paddingBottom="8dp">
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_modified"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propModified"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>

        <TableRow>
            <TextView
                android:paddingEnd="16dp"
                android:text="@string/prop_permissions"
                android:textAppearance="?attr/textAppearanceLabelMedium" />
            <TextView
                android:id="@+id/propPermissions"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </TableRow>
    </TableLayout>
</ScrollView>
